# czi-pyramidizer

./: .mega-linter.yml  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: cmake_alpine_linux.yml  cmake_linux_x64.yml  cmake_windows_arm64.yml  cmake_windows_x64.yml  megalinter.yml  reuse.yml
.reuse/: dep5
docs/: getting-started.md  index.md  version-history.md
docs/usage/: cli.md  examples.md
libpyramidizer/: CMakeLists.txt  IConsoleIo.h  libpyramidizer.cpp  libpyramidizer.h  libpyramidizer_config.h.in
libpyramidizer-unittests/: CMakeLists.txt  check_for_pyramid_tests.cpp  commandlineparser_tests.cpp  imaging_tests.cpp  libCZIUtilities.cpp  libCZIUtilities.h  plane_enumerator_tests.cpp  pyramid_utils_test.cpp  pyramidizer_operation_test.cpp  tile_helper_test.cpp  tiling_enumerator_tests.cpp
libpyramidizer/inc/: CheckForPyramid.h  IContext.h  IDecimationProcessing.h  ILog.h  UpperPyramidLayersPyramidizer.h  commandlineoptions.h  do_pyramidize.h  plane_enumerator.h  pyramid_utilities.h  pyramidizer_operation.h  tile_helper.h  tiling_enumerator.h  utilities.h
libpyramidizer/src/: CheckForPyramid.cpp  Context.cpp  DecimationProcessing.cpp  UpperPyramidLayersPyramidizer.cpp  commandlineoptions.cpp  do_pyramidize.cpp  pyramid_utilities.cpp  pyramidizer_operation.cpp  tile_helper.cpp  utilities.cpp
libpyramidizer/src/imaging/: bitmapdata.cpp  bitmapdata.h  compose.cpp  compose.h  decimate_opencv.cpp  decimate_opencv.h  opencvutils.cpp  opencvutils.h
modules/: libCZI.cmake
